Updated Tabu search, permutation move operators, real vector move operators, binary vector move operators #840 Added a Tabu Search TSP workbench
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3340 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Encodings.BinaryVectorEncoding/3.3/HeuristicLab.Encodings.BinaryVectorEncoding-3.3.csproj
+++ b/sources/HeuristicLab.Encodings.BinaryVectorEncoding/3.3/HeuristicLab.Encodings.BinaryVectorEncoding-3.3.csproj
@@ -105,8 +105,9 @@
     <Compile Include="Moves\OneBitflipMove\OneBitflipMove.cs" />
     <Compile Include="Moves\OneBitflipMove\OneBitflipMoveGenerator.cs" />
     <Compile Include="Moves\OneBitflipMove\OneBitflipMoveMaker.cs" />
-    <Compile Include="Moves\OneBitflipMove\OneBitflipTabuMoveMaker.cs" />
-    <Compile Include="Moves\OneBitflipMove\PreventOneBitflipTabuMoveEvaluator.cs" />
+    <Compile Include="Moves\OneBitflipMove\OneBitflipMoveTabuChecker.cs" />
+    <Compile Include="Moves\OneBitflipMove\OneBitflipMoveTabuMaker.cs" />
+    <Compile Include="Moves\OneBitflipMove\OneBitflipMoveAttribute.cs" />
     <Compile Include="Moves\OneBitflipMove\StochasticOneBitflipMultiMoveGenerator.cs" />
     <Compile Include="Moves\OneBitflipMove\StochasticOneBitflipSingleMoveGenerator.cs" />
     <Compile Include="Moves\OneIndexMove.cs" />
