Fixed bugs in ADF operators and added test classes for ADF operators. #290 (Implement ADFs)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3360 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Encodings.SymbolicExpressionTreeEncoding/3.3/HeuristicLab.Encodings.SymbolicExpressionTreeEncoding-3.3.csproj
+++ b/sources/HeuristicLab.Encodings.SymbolicExpressionTreeEncoding/3.3/HeuristicLab.Encodings.SymbolicExpressionTreeEncoding-3.3.csproj
@@ -84,6 +84,15 @@
   <ItemGroup>
     <Compile Include="ArchitectureAlteringOperators\ArgumentCreater.cs" />
     <Compile Include="ArchitectureAlteringOperators\ArgumentDeleter.cs" />
+    <Compile Include="ArchitectureAlteringOperators\ArgumentDuplicater.cs" />
+    <Compile Include="ArchitectureAlteringOperators\GrammarModifier.cs" />
+    <Compile Include="ArchitectureAlteringOperators\RandomArchitectureAlteringOperator.cs" />
+    <Compile Include="ArchitectureAlteringOperators\SubroutineCreater.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="ArchitectureAlteringOperators\SubroutineDeleter.cs" />
+    <Compile Include="ArchitectureAlteringOperators\SubroutineDuplicater.cs" />
+    <Compile Include="SymbolicExpressionTreeTopLevelNode.cs" />
     <Compile Include="Crossovers\SubtreeCrossover.cs">
       <SubType>Code</SubType>
     </Compile>
