--- a/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
+++ b/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
@@ -87,6 +87,7 @@
   <ItemGroup>
     <Compile Include="CancelEventArgs.cs" />
     <None Include="HeuristicLabCommonPlugin.cs.frame" />
+    <Compile Include="IContent.cs" />
     <Compile Include="ReferenceEqualityComparer.cs" />
     <Compile Include="TypeExtensions.cs" />
     <Compile Include="ObservableList.cs" />
