Adaptions according to the new IContent interface (#969).
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3368 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Collections/3.3/HeuristicLab.Collections-3.3.csproj
+++ b/sources/HeuristicLab.Collections/3.3/HeuristicLab.Collections-3.3.csproj
@@ -121,6 +121,10 @@
     <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\HeuristicLab.Common\3.2\HeuristicLab.Common-3.2.csproj">
+      <Project>{1FC004FC-59AF-4249-B1B6-FF25873A20E4}</Project>
+      <Name>HeuristicLab.Common-3.2</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.Persistence\3.3\HeuristicLab.Persistence-3.3.csproj">
       <Project>{102BC7D3-0EF9-439C-8F6D-96FF0FDB8E1B}</Project>
       <Name>HeuristicLab.Persistence-3.3</Name>
