--- a/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
+++ b/sources/HeuristicLab.Optimization/3.3/HeuristicLab.Optimization-3.3.csproj
@@ -87,6 +87,8 @@
     <Compile Include="Algorithm.cs" />
     <Compile Include="BatchRun.cs" />
     <Compile Include="Interfaces\IMigrator.cs" />
+    <Compile Include="Interfaces\ISubScopesQualityComparator.cs" />
+    <Compile Include="Interfaces\IQualityComparator.cs" />
     <Compile Include="Interfaces\ISelfAdaptiveManipulator.cs" />
     <Compile Include="Interfaces\IStrategyParameterCrossover.cs" />
     <Compile Include="Interfaces\IStrategyParameterManipulator.cs" />
