--- a/sources/HeuristicLab.Parameters/3.3/HeuristicLab.Parameters-3.3.csproj
+++ b/sources/HeuristicLab.Parameters/3.3/HeuristicLab.Parameters-3.3.csproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <None Include="HeuristicLabParametersPlugin.cs.frame" />
     <Compile Include="ConstrainedValueParameter.cs" />
+    <Compile Include="SelectedSubScopesLookupParameter.cs" />
     <Compile Include="OptionalConstrainedValueParameter.cs" />
     <Compile Include="ValueParameter.cs" />
     <Compile Include="LookupParameter.cs" />
