--- a/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
+++ b/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
@@ -88,8 +88,12 @@
     <Compile Include="CancelEventArgs.cs" />
     <None Include="HeuristicLabCommonPlugin.cs.frame" />
     <Compile Include="Cloner.cs" />
+    <Compile Include="EnumerableEventArgs.cs" />
     <Compile Include="IContent.cs" />
     <Compile Include="IDeepCloneable.cs" />
+    <Compile Include="NotificationDictionary.cs" />
+    <Compile Include="ObservableCollection.cs" />
+    <Compile Include="ObservableList.cs" />
     <Compile Include="ReferenceEqualityComparer.cs" />
     <Compile Include="TypeExtensions.cs" />
     <Compile Include="DoubleExtensions.cs">
