Added base class `DeepCloneable` again (#975)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3385 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Common/3.3/HeuristicLab.Common-3.3.csproj
+++ b/sources/HeuristicLab.Common/3.3/HeuristicLab.Common-3.3.csproj
@@ -88,6 +88,7 @@
     <Compile Include="CancelEventArgs.cs" />
     <None Include="HeuristicLabCommonPlugin.cs.frame" />
     <Compile Include="Cloner.cs" />
+    <Compile Include="DeepCloneable.cs" />
     <Compile Include="IContent.cs" />
     <Compile Include="IDeepCloneable.cs" />
     <Compile Include="ReferenceEqualityComparer.cs" />
