Refactored HeuristicLab.Collections (#977)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3390 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Core/3.3/HeuristicLab.Core-3.3.csproj
+++ b/sources/HeuristicLab.Core/3.3/HeuristicLab.Core-3.3.csproj
@@ -101,6 +101,33 @@
     <Compile Include="Attributes\ItemAttribute.cs" />
     <Compile Include="Attributes\CreatableAttribute.cs" />
     <None Include="HeuristicLabCorePlugin.cs.frame" />
+    <Compile Include="Collections\ReadOnlyItemDictionary.cs" />
+    <Compile Include="Collections\ItemDictionary.cs" />
+    <Compile Include="Collections\ReadOnlyKeyedItemCollection.cs" />
+    <Compile Include="Collections\KeyedItemCollection.cs" />
+    <Compile Include="Collections\ReadOnlyItemSet.cs" />
+    <Compile Include="Collections\ReadOnlyItemList.cs" />
+    <Compile Include="Collections\ReadOnlyItemArray.cs" />
+    <Compile Include="Collections\ReadOnlyItemCollection.cs" />
+    <Compile Include="Collections\ItemArray.cs" />
+    <Compile Include="Collections\ItemCollection.cs" />
+    <Compile Include="Collections\ItemList.cs" />
+    <Compile Include="Collections\ItemSet.cs" />
+    <Compile Include="Collections\NamedItemCollection.cs" />
+    <Compile Include="Collections\OperationCollection.cs" />
+    <Compile Include="Collections\OperatorCollection.cs" />
+    <Compile Include="Collections\OperatorList.cs" />
+    <Compile Include="Collections\OperatorSet.cs" />
+    <Compile Include="Collections\ParameterCollection.cs" />
+    <Compile Include="Collections\ScopeList.cs" />
+    <Compile Include="Collections\ValueParameterCollection.cs" />
+    <Compile Include="Collections\VariableCollection.cs" />
+    <Compile Include="Interfaces\IKeyedItemCollection.cs" />
+    <Compile Include="Interfaces\IItemList.cs" />
+    <Compile Include="Interfaces\IItemSet.cs" />
+    <Compile Include="Interfaces\IItemDictionary.cs" />
+    <Compile Include="Interfaces\IItemArray.cs" />
+    <Compile Include="Interfaces\IItemCollection.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Executable.cs" />
     <Compile Include="ExecutionState.cs" />
@@ -111,13 +138,10 @@
     <Compile Include="Interfaces\IAtomicOperation.cs" />
     <Compile Include="Interfaces\IExecutionContext.cs" />
     <Compile Include="Interfaces\IOperation.cs" />
-    <Compile Include="OperationCollection.cs" />
     <Compile Include="ParameterizedNamedItem.cs" />
-    <Compile Include="ValueParameterCollection.cs" />
     <Compile Include="Interfaces\IValueLookupParameter.cs" />
     <Compile Include="Interfaces\IValueParameter.cs" />
     <Compile Include="Interfaces\ILookupParameter.cs" />
-    <Compile Include="ItemArray.cs" />
     <Compile Include="Engine.cs" />
     <Compile Include="Interfaces\IScope.cs" />
     <Compile Include="Interfaces\IVariable.cs" />
@@ -125,20 +149,10 @@
     <Compile Include="NamedItem.cs" />
     <Compile Include="OperatorGraph.cs" />
     <Compile Include="Interfaces\IParameter.cs" />
-    <Compile Include="OperatorCollection.cs" />
-    <Compile Include="ItemCollection.cs" />
-    <Compile Include="OperatorSet.cs" />
-    <Compile Include="ItemSet.cs" />
-    <Compile Include="ItemList.cs" />
     <Compile Include="Interfaces\IEngine.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ExecutionContext.cs" />
-    <Compile Include="OperatorList.cs" />
-    <Compile Include="ParameterCollection.cs" />
-    <Compile Include="VariableCollection.cs" />
-    <Compile Include="ScopeList.cs" />
-    <Compile Include="NamedItemCollection.cs" />
     <Compile Include="Interfaces\INamedItem.cs" />
     <Compile Include="Interfaces\IItem.cs" />
     <Compile Include="Interfaces\IRandom.cs" />
