Added gender specific selection and ported the necessary operators RightChildReducer and SubScopesMixer #976
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3404 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Operators/3.3/HeuristicLab.Operators-3.3.csproj
+++ b/sources/HeuristicLab.Operators/3.3/HeuristicLab.Operators-3.3.csproj
@@ -97,6 +97,7 @@
     <Compile Include="ScopeCleaner.cs" />
     <Compile Include="StochasticBranch.cs" />
     <Compile Include="SubScopesCreator.cs" />
+    <Compile Include="SubScopesMixer.cs" />
     <Compile Include="SubScopesProcessor.cs" />
     <Compile Include="SubScopesRemover.cs" />
     <Compile Include="SubScopesSorter.cs" />
