added stubs for content classes and interfaces(ticket #980)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3405 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Common/3.3/HeuristicLab.Common-3.3.csproj
+++ b/sources/HeuristicLab.Common/3.3/HeuristicLab.Common-3.3.csproj
@@ -88,8 +88,12 @@
     <Compile Include="CancelEventArgs.cs" />
     <None Include="HeuristicLabCommonPlugin.cs.frame" />
     <Compile Include="Cloner.cs" />
+    <Compile Include="Content\Content.cs" />
+    <Compile Include="Content\ContentManager.cs" />
+    <Compile Include="Content\IStorableContent.cs" />
+    <Compile Include="Content\StorableContent.cs" />
     <Compile Include="DeepCloneable.cs" />
-    <Compile Include="IContent.cs" />
+    <Compile Include="Content\IContent.cs" />
     <Compile Include="IDeepCloneable.cs" />
     <Compile Include="ReferenceEqualityComparer.cs" />
     <Compile Include="TypeExtensions.cs" />
