Restricted types of child operators in MultiOperator (#979)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3407 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Operators.Views/3.3/HeuristicLab.Operators.Views-3.3.csproj
+++ b/sources/HeuristicLab.Operators.Views/3.3/HeuristicLab.Operators.Views-3.3.csproj
@@ -91,11 +91,11 @@
       <DependentUpon>AlgorithmOperatorView.cs</DependentUpon>
     </Compile>
     <None Include="HeuristicLabOperatorsViewsPlugin.cs.frame" />
-    <Compile Include="MultipleCallsOperatorView.cs">
+    <Compile Include="MultiOperatorView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="MultipleCallsOperatorView.Designer.cs">
-      <DependentUpon>MultipleCallsOperatorView.cs</DependentUpon>
+    <Compile Include="MultiOperatorView.Designer.cs">
+      <DependentUpon>MultiOperatorView.cs</DependentUpon>
     </Compile>
     <Compile Include="OperatorView.cs">
       <SubType>UserControl</SubType>
