--- a/sources/HeuristicLab.Operators/3.3/HeuristicLab.Operators-3.3.csproj
+++ b/sources/HeuristicLab.Operators/3.3/HeuristicLab.Operators-3.3.csproj
@@ -90,7 +90,7 @@
     <Compile Include="Comparator.cs" />
     <Compile Include="Assigner.cs" />
     <Compile Include="AlgorithmOperator.cs" />
-    <Compile Include="MultipleCallsOperator.cs" />
+    <Compile Include="MultiOperator.cs" />
     <Compile Include="Operator.cs" />
     <Compile Include="Placeholder.cs" />
     <Compile Include="IntCounter.cs" />
