Updated Gender Specific Selection, Offspring Selector and other changes related to the OSGA #976 Removed old OS plugin, removed SelectedSubScopesLookupParameter
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3413 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Selection/3.3/HeuristicLab.Selection-3.3.csproj
+++ b/sources/HeuristicLab.Selection/3.3/HeuristicLab.Selection-3.3.csproj
@@ -82,7 +82,9 @@
   <ItemGroup>
     <None Include="HeuristicLabSelectionPlugin.cs.frame" />
     <Compile Include="BestSelector.cs" />
+    <Compile Include="ConditionalSelector.cs" />
     <Compile Include="GenderSpecificSelector.cs" />
+    <Compile Include="OffspringSelector.cs" />
     <Compile Include="RightChildReducer.cs" />
     <Compile Include="SingleObjectiveSelector.cs" />
     <Compile Include="LeftReducer.cs" />
