Added an OS Island GA #976 Wired the parallel parameter in the standard Island GA #971
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3429 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Algorithms.OffspringSelectionGeneticAlgorithm/3.3/HeuristicLab.Algorithms.OffspringSelectionGeneticAlgorithm-3.3.csproj
+++ b/sources/HeuristicLab.Algorithms.OffspringSelectionGeneticAlgorithm/3.3/HeuristicLab.Algorithms.OffspringSelectionGeneticAlgorithm-3.3.csproj
@@ -80,6 +80,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HeuristicLabAlgorithmsOffspringSelectionGeneticAlgorithmPlugin.cs" />
+    <Compile Include="OffspringSelectionIslandGeneticAlgorithm.cs" />
+    <Compile Include="OffspringSelectionIslandGeneticAlgorithmMainLoop.cs" />
     <Compile Include="OffspringSelectionGeneticAlgorithm.cs" />
     <Compile Include="OffspringSelectionGeneticAlgorithmMainLoop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
